--- a/requirements.txt
+++ b/requirements.txt
@@ -355,3 +355,6 @@ yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
 zict==2.1.0
 zipp==3.21.0
 zope.interface @ file:///C:/ci/zope.interface_1625036252485/work
+
+gunicorn
+psycopg2-binary
