--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,10 @@
-alembic==1.16.4
-arabic-reshaper==3.0.0
-asn1crypto==1.5.1
-blinker==1.9.0
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-cryptography==45.0.5
-cssselect2==0.8.0
-et_xmlfile==2.0.0
-Flask==3.1.1
-Flask-Login==0.6.3
-Flask-Migrate==4.1.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.3
-html5lib==1.1
-idna==3.10
-importlib_metadata==8.7.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-lxml==6.0.0
-Mako==1.3.10
-MarkupSafe==3.0.2
-numpy==2.0.2
-openpyxl==3.1.5
-oscrypto==1.3.0
-pandas==2.3.1
-pillow==11.3.0
-pycparser==2.22
-pyHanko==0.29.1
-pyhanko-certvalidator==0.27.0
-pypdf==5.8.0
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-pytz==2025.2
-pywin32==311
-PyYAML==6.0.2
-reportlab==4.4.2
-requests==2.32.4
-six==1.17.0
-SQLAlchemy==2.0.41
-svglib==1.5.1
-tinycss2==1.4.0
-tomli==2.2.1
-typing_extensions==4.14.1
-tzdata==2025.2
-tzlocal==5.3.1
-uritools==5.0.0
-urllib3==2.5.0
-waitress==3.0.2
-webencodings==0.5.1
-Werkzeug==3.1.3
-xhtml2pdf==0.2.17
-zipp==3.23.0
+Flask
+Flask-Login
+Flask-SQLAlchemy
+gunicorn
+psycopg2-binary
+xhtml2pdf
+Pillow
+pandas
+openpyxl
+waitress
